unpackaged/main/default/objects/User/fields/Application_Notification_Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Application_Notification_Email_Frequency__c</fullName>
    <label>Application Notification Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7 days</fullName>
            </value>
            <value>
                <fullName>5 days</fullName>
                <default>true</default>
                <label>5 days</label>
            </value>
            <value>
                <fullName>3 days</fullName>
            </value>
            <value>
                <fullName>1 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>