unpackaged/main/default/objects/User/fields/Car_Description__c.field-meta.xml
<CustomField>
    <fullName>Car_Description__c</fullName>
    <inlineHelpText>Please enter the make, model and colour of your car.</inlineHelpText>
    <label>Car Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>