unpackaged/main/default/objects/User/fields/Car_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Registration_Number__c</fullName>
    <inlineHelpText>Please enter any Car Registration numbers that you may drive into work in.</inlineHelpText>
    <label>Car Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>