unpackaged/main/default/objects/User/fields/Commision_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commision_Rate__c</fullName>
    <label>Commision Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>