unpackaged/main/default/objects/User/fields/Divisions__c.field-meta.xml
<CustomField>
    <fullName>Divisions__c</fullName>
    <label>Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Data Services</fullName>
            </value>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>PLM</fullName>
            </value>
            <value>
                <fullName>Solid Edge</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>