unpackaged/main/default/objects/User/fields/enerjyhubTermsConditionsLastAccepted__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubTermsConditionsLastAccepted__c</fullName>
    <label>enerjyhub Ts &amp; Cs Last Accepted</label>
    <type>DateTime</type>
</CustomField>