unpackaged/main/default/objects/User/fields/FinishDate__c.field-meta.xml
<CustomField>
    <fullName>FinishDate__c</fullName>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>