unpackaged/main/default/objects/User/fields/First_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Login_Date__c</fullName>
    <description>Records date of first login into the enerjyhub community</description>
    <label>First Login Date</label>
    <type>Date</type>
</CustomField>