unpackaged/main/default/objects/User/fields/InvoiceAdministrator__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAdministrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Admin</label>
    <type>Checkbox</type>
</CustomField>