unpackaged/main/default/objects/User/fields/IsCanBypassVR__c.field-meta.xml
<CustomField>
    <fullName>IsCanBypassVR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCanBypassVR</label>
    <type>Checkbox</type>
</CustomField>