unpackaged/main/default/objects/User/fields/IsContactAccountEscalatedAuto__c.field-meta.xml
<CustomField>
    <fullName>IsContactAccountEscalatedAuto__c</fullName>
    <formula>IF(Contact.IsParentAccountEscalatedAuto__c || Contact.Account.IsEnerjyhubEscalated__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsContactAccountEscalatedAuto</label>
    <type>Checkbox</type>
</CustomField>