unpackaged/main/default/objects/User/fields/IsMXUserId__c.field-meta.xml
<CustomField>
    <fullName>IsMXUserId__c</fullName>
    <formula>NOT(ISBLANK(MXUserID__c))</formula>
    <label>IsMXUserId</label>
    <type>Checkbox</type>
</CustomField>