unpackaged/main/default/objects/User/fields/IsShowExpiryBanner__c.field-meta.xml
<CustomField>
    <fullName>IsShowExpiryBanner__c</fullName>
    <formula>IF(
Contact.Account.IsShowExpiryBanner__c || 
Contact.Account.Parent.IsShowExpiryBanner__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsShowExpiryBanner</label>
    <type>Checkbox</type>
</CustomField>