unpackaged/main/default/objects/User/fields/MajentaHomeUserId__c.field-meta.xml
<CustomField>
    <fullName>MajentaHomeUserId__c</fullName>
    <label>MajentaHomeUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>