unpackaged/main/default/objects/User/fields/MXUserID__c.field-meta.xml
<CustomField>
    <fullName>MXUserID__c</fullName>
    <label>MXUserID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>