unpackaged/main/default/objects/User/fields/SageCodePLM__c.field-meta.xml
<CustomField>
    <fullName>SageCodePLM__c</fullName>
    <externalId>true</externalId>
    <label>PLM Sage Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>