unpackaged/main/default/objects/User/fields/SageCodeSOL__c.field-meta.xml
<CustomField>
    <fullName>SageCodeSOL__c</fullName>
    <externalId>true</externalId>
    <label>Solutions Sage Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>