unpackaged/main/default/objects/User/fields/SolutionsWallboard__c.field-meta.xml
<CustomField>
    <fullName>SolutionsWallboard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to make this user appear in the Solutions wallboard charts.</inlineHelpText>
    <label>Solutions Wallboard</label>
    <type>Checkbox</type>
</CustomField>