unpackaged/main/default/objects/User/validationRules/USER_VR1_RestrictGSIEditAccess.validationRule-meta.xml
<ValidationRule>
    <fullName>USER_VR1_RestrictGSIEditAccess</fullName>
    <active>true</active>
    <description>If the user has a Community User or Community Plus licence and does not have a JLR profile, GSI will be unable to edit the record.</description>
    <errorConditionFormula>AND(	$Profile.Name = 'JLR Support Team', 
NOT(OR(Profile.Name = 'JLR Community User - Standard User',
	  Profile.Name = 'JLR Community User - Standard User Plus',
			Profile.Name = 'JLR Community User - Super User',
			Profile.Name = 'JLR Community User - Account Super User',
						Profile.Name = 'JLR Support Team')))</errorConditionFormula>
    <errorMessage>You do not have access to edit this user. Please contact your Administrator for help. [USER_VR1]</errorMessage>
</ValidationRule>