unpackaged/main/default/objects/User/listViews/ChatterExternalUsers.listView-meta.xml
<ListView>
    <fullName>ChatterExternalUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.USERTYPE</field>
        <operation>equals</operation>
        <value>n</value>
    </filters>
    <label>Chatter External Users</label>
</ListView>