unpackaged/main/default/objects/User/listViews/SolidEdgeUsers.listView-meta.xml
<ListView>
    <fullName>SolidEdgeUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.PROFILE.USERTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Divisions__c</field>
        <operation>includes</operation>
        <value>Solid Edge</value>
    </filters>
    <label>Solid Edge Users</label>
</ListView>